2003-05-17  Karl Bongers(apply patches from Martin Helmling)

	* debugger/mcs51/sdcdb.c,cmd.c,break.c and .h files.
  Added feature to script commands from file.

2003-05-14  Bernhard Held <bernhard@bernhardheld.de>

        * device/lib/_strtok.c: fixed bug #734355 by Lenny Story and Tim Woodall
	* src/SDCCutil.c: include ctype.h for win32

2003-05-13  Bernhard Held <bernhard@bernhardheld.de>

	* src/pic16/*: removed CR from many files, reported by Vangelis Rokas

2003-05-12  Karl Bongers(apply development patches from Martin Helmling)

	* debugger/mcs51/sdcdb.c,simi.c,cmd.c,break.c and .h files.
  Fixed so you can set breakpoints prior to run, run does not stop
  on entry now.  Add tbreak.  Other enhancements and fixes for use
  with ddd.

2003-05-12  Borut Razem <borut.razem@siol.net>

	* src/SDCCmain.c: fixed the problem with searching the DATADIR as the last resort on *nix

2003-05-11  Borut Razem <borut.razem@siol.net>

	* src/SDCCutil.c: WIN32 version of getBinPath() calls GetModuleFileName() to determine
	the path of bin directory, so that PATH is the only env. variable, which has to be set
	in case of standard installation.
	* src/ds390/ds390.dsp: increased value of /Zm option to 1000
	* src/pic/main.c: add quotes to file name parameters for gplink and gpasm
	* src/SDCCglobl.h, src/SDCCmain.c, doc/sdccman.lyx: added --print-search-dirs command line option

2003-05-04  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCmain.c (linkEdit): fixed buffer overflow for gbz80
	* support/regression/Makefile: inter-port-clean is no longer nesessary, the
	temp files are in the port dir; clean the gen/test directory when
	generating new test.c
	* support/regression/ports/host/spec.mk: defined OBJEXT for target clean
	* support/regression/tests/vaargs.c: fixed gcc 3.3 warning
	* support/regression/tests/zeropad.c: added

2003-05-09    <johan@balder>

	* src/SDCCglue.c: fixed bug #597940

2003-05-05  Karl Bongers(apply patches from Martin Helmling)
